fix spacing on projects and images and pull only three objects from sanity on home page

--- a/app/[lang]/Home.scss
+++ b/app/[lang]/Home.scss
@@ -299,10 +299,11 @@
   &__image {
     width: 100%;
     height: 250px;
+    object-fit: cover;
     @include breakpoint(1000px) {
       width: 350px;
       height: 350px;
-      background-size: cover;
+      // background-size: cover;
     }
   }
   &__project-name {
