--- a/app/[lang]/projects/[projectSlug]/ProjectPage.scss
+++ b/app/[lang]/projects/[projectSlug]/ProjectPage.scss
@@ -8,19 +8,19 @@
   &__content {
     padding: 72px 20px;
     @include breakpoint(1000px) {
-      padding: 144px 100px;
+      padding: 80px 100px 144px 100px; // Top, Right, Bottom, Left
     }
   }
 
   &__title {
     color: #ba1b1d;
-
+    margin-bottom: 36px;
     font-size: 36px;
     font-style: normal;
     font-weight: 500;
     line-height: 120%; /* 43.2px */
     @include breakpoint(1000px) {
-      font-size: 64px;
+      font-size: 56px;
     }
   }
 
@@ -33,11 +33,14 @@
     line-height: 120%; /* 33.6px */
   }
   &__categories {
-    display: none;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
     @include breakpoint(1000px) {
-      display: flex;
       justify-content: space-between;
-      gap: 20px;
+      gap: 80px;
+      flex-direction: row;
+      // border-bottom: 2px solid #dbd8d7;
     }
   }
   &__category {
@@ -94,10 +97,16 @@
     text-align: center;
     text-decoration: none;
   }
+  &__gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
   &__gallery-image {
     width: 100%;
     @include breakpoint(1000px) {
-      width: 30%;
+      width: 40%;
+      flex: 1;
     }
   }
 }
